change gulp file

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -27,3 +27,7 @@ $sans: 'Open Sans', Helvetica, Roboto, Arial, sans-serif;
 
 $content-width: 828px;
 $border-radius: 5px;
+
+.hello {
+  background-color: red;
+}
